// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Large modal component should render component correctly 1`] = `
<div
  className="modal close__modal"
>
  <section
    className="modal__body"
  >
    <p
      className="modal__title"
    >
      This is a title
    </p>
    <button
      className="modal-close"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
      <span
        className="sr-only"
      >
        Close
      </span>
    </button>
    <div>
      Hello
    </div>
  </section>
</div>
`;

exports[`Test Large modal component should render large modal 1`] = `
<div
  className="modal display__modal"
>
  <section
    className="modal__body"
  >
    <button
      className="modal-close"
      onClick={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
      <span
        className="sr-only"
      >
        Close
      </span>
    </button>
    <div>
      Hello
    </div>
  </section>
</div>
`;

exports[`Test Large modal component should render large modal without cancel button 1`] = `
<div
  className="modal display__modal"
>
  <section
    className="modal__body"
  >
    <div>
      Hello
    </div>
  </section>
</div>
`;

exports[`Test Large modal component should render medium modal 1`] = `
<div
  className="modal display__modal"
>
  <section
    className="modal-body__md"
  >
    <button
      className="modal-close"
      onClick={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
      <span
        className="sr-only"
      >
        Close
      </span>
    </button>
    <div>
      Hello
    </div>
  </section>
</div>
`;

exports[`Test Large modal component should render medium modal 2`] = `
<div
  className="modal display__modal"
>
  <section
    className="modal-body__md"
  >
    <div>
      Hello
    </div>
  </section>
</div>
`;
